outputs_20260408-010853-2127533d/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_5l2cdzvm\src\gtm_tom_3_phase_inverter_pwm.c:16:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_5l2cdzvm\include/IfxGtm_Pwm.h:169:5: error: unknown type name 'IfxGtm_Trig_MscOut'
  169 |     IfxGtm_Trig_MscOut         *mscOut;
      |     ^~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_5l2cdzvm\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:6:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_5l2cdzvm\include/IfxGtm_Pwm.h:169:5: error: unknown type name 'IfxGtm_Trig_MscOut'
  169 |     IfxGtm_Trig_MscOut         *mscOut;
      |     ^~~~~~~~~~~~~~~~~~
